tests/paczka2/big_fuzzy/16353660.err
Error in line 1: HBfrty2M S181 78,2
Error in line 8: HBfrty2M S954 183,56
Error in line 4: HBfrty2M S954 84,6
Error in line 14: Mck7hTifQQ S181 84,11
Error in line 9: Mck7hTifQQ A28 47,8
Error in line 15: Mck7hTifQQ S181 225,4
Error in line 2: Z0qIj A28 24,7
Error in line 23: S718 A28 14,2
Error in line 49: Z0qIj S954 58,4
Error in line 42: S718 S718 76,2
Error in line 37: HBfrty2M A28 53,4
Error in line 61: DzNzUd S718 82,2
Error in line 63: F8cLZMXk S718 26,9
Error in line 79: F8cLZMXk A28 143,20
Error in line 77: Mck7hTifQQ S954 1,1
Error in line 80: qLgKuv S954 75,0
Error in line 65: Z0qIj S718 26,0
Error in line 98: qLgKuv S718 -3,1
Error in line 92: qLgKuv S718 58,4
Error in line 104: HBfrty2M S181 -1,5
Error in line 107: Z0qIj S718 93,6
Error in line 109: F8cLZMXk S954 90,8
Error in line 114: S718 S181 32,9
Error in line 110: F8cLZMXk A28 88,9
Error in line 117: HBfrty2M S181 98,3
Error in line 137: HBfrty2M A28 -6,5
Error in line 130: F8cLZMXk S954 41,9
Error in line 125: Z0qIj S954 99,3
Error in line 148: Mck7hTifQQ S718 43,3
Error in line 154: qLgKuv S954 98,8
Error in line 165: DzNzUd S718 169,2
Error in line 131: HBfrty2M A28 91,7
Error in line 166: S718 S181 2,2
Error in line 172: S718 S718 51,3
Error in line 173: qLgKuv S954 39,3
Error in line 167: F8cLZMXk S718 34,5
Error in line 196: HBfrty2M S181 43,7
Error in line 204: Mck7hTifQQ S181 73,6
Error in line 201: qLgKuv A28 89,4
Error in line 210: qLgKuv S718 55,1
Error in line 220: Z0qIj S718 41,4
Error in line 237: F8cLZMXk S718 11,8
Error in line 246: S718 S181 69,2
